<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ui.cashout.CashoutDialogFragment"
    >

  <TextView
      android:id="@+id/cashoutTitle"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:text="@string/theq_sdk_cash_out_title"
      android:textColor="@color/theq_sdk_black"
      android:textSize="22sp"
      android:textStyle="bold"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintHorizontal_bias="0"
      android:layout_marginStart="24dp"
      android:layout_marginEnd="24dp"
      android:layout_marginTop="24dp"
      />

  <TextView
      android:id="@+id/cashoutMessage"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="8dp"
      android:text="@string/theq_sdk_cashout_message"
      android:textColor="@color/theq_sdk_black"
      android:textSize="16sp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/cashoutTitle"
      app:layout_constraintHorizontal_bias="0"
      android:layout_marginStart="24dp"
      android:layout_marginEnd="24dp"
      />

  <EditText
      android:id="@+id/emailEditText"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="8dp"
      android:hint="@string/theq_sdk_paypal_email"
      android:inputType="textEmailAddress"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/cashoutMessage"
      android:layout_marginStart="18dp"
      android:layout_marginEnd="18dp"
      />

  <Button
      android:id="@+id/dismiss"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="8dp"
      android:text="@string/theq_sdk_dismiss"
      app:layout_constraintEnd_toStartOf="@id/requestCashout"
      app:layout_constraintTop_toBottomOf="@id/emailEditText"
      style="@style/TransparentButton"
      />

  <Button
      android:id="@+id/requestCashout"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="8dp"
      android:text="@string/theq_sdk_request"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintTop_toBottomOf="@id/emailEditText"
      style="@style/TransparentButton"
      android:layout_marginEnd="8dp"
      />

  <ProgressBar
      android:id="@+id/loadingSpinner"
      android:layout_width="40dp"
      android:layout_height="40dp"
      android:visibility="gone"
      app:layout_constraintBottom_toBottomOf="@id/requestCashout"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0"
      app:layout_constraintStart_toStartOf="parent"
      android:layout_marginStart="18dp"
      app:layout_constraintTop_toBottomOf="@id/cashoutTitle"
      app:layout_constraintVertical_bias=".5"
      />

  <androidx.constraintlayout.widget.Group
      android:id="@+id/loadedGroup"
      android:layout_width="0dp"
      android:layout_height="0dp"
      android:visibility="invisible"
      app:constraint_referenced_ids="cashoutMessage, dismiss"
      tools:visibility="visible"
      />

  <androidx.constraintlayout.widget.Group
      android:id="@+id/cashoutAllowedGroup"
      android:layout_width="0dp"
      android:layout_height="0dp"
      android:visibility="gone"
      app:constraint_referenced_ids="emailEditText, requestCashout"
      tools:visibility="visible"
      />

</androidx.constraintlayout.widget.ConstraintLayout>