<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="8dp"
    android:paddingEnd="16dp"
    android:paddingStart="16dp"
    >

  <TextView
      android:id="@+id/title"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/theq_sdk_use_extra_life_title"
      android:textColor="@color/theq_sdk_color_accent"
      android:textStyle="bold"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      />

  <ImageView
      android:id="@+id/heart"
      android:layout_width="72dp"
      android:layout_height="72dp"
      android:layout_marginTop="8dp"
      android:src="@drawable/theq_sdk_heart_full"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintTop_toBottomOf="@id/title"
      />

  <TextView
      android:id="@+id/description"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:gravity="center_horizontal"
      android:text="@string/theq_sdk_use_extra_life_description"
      android:textColor="@color/theq_sdk_color_accent"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintTop_toBottomOf="@id/heart"
      />


  <androidx.constraintlayout.widget.Guideline
      android:id="@+id/buttonGuideline"
      android:layout_width="0dp"
      android:layout_height="0dp"
      android:orientation="vertical"
      app:layout_constraintGuide_percent=".5"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      />

  <androidx.appcompat.widget.AppCompatButton
      android:id="@+id/deny"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginEnd="8dp"
      android:layout_marginTop="16dp"
      android:background="@color/theq_sdk_transparent"
      android:text="@string/theq_sdk_dont_use_it"
      android:textAllCaps="false"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="@id/buttonGuideline"
      app:layout_constraintTop_toBottomOf="@id/description"
      />

  <androidx.appcompat.widget.AppCompatButton
      android:id="@+id/accept"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginLeft="8dp"
      android:layout_marginTop="16dp"
      android:backgroundTint="@color/theq_sdk_color_accent"
      android:text="@string/theq_sdk_use_it"
      android:textAllCaps="false"
      android:textColor="@color/theq_sdk_white"
      app:layout_constraintLeft_toLeftOf="@id/buttonGuideline"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintTop_toBottomOf="@id/description"
      />

</androidx.constraintlayout.widget.ConstraintLayout>
